--- a/models/linear/examples.ipynb
+++ b/models/linear/examples.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "eaf6e1e6-361c-4832-b3e2-bc40e22d1dad",
    "metadata": {},
    "outputs": [],
    "source": [
     "from regression import *\n",
+    "from classification import *\n",
     "from sklearn.datasets import load_diabetes\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, classification_report\n",
     "\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "np.random.seed(0)\n",
@@ -22,7 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
+   "id": "4b566e32-7551-4ab6-8b94-e9940ee82936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classification_data = pd.read_csv(\"heart.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "bbca4514-6dc8-4141-99cd-a25c19aeaf13",
    "metadata": {},
    "outputs": [
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "869b75df-3530-4692-abed-5a072923ef73",
    "metadata": {},
    "outputs": [
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "f85bb3b9-81e6-41ad-99da-667fed6df14c",
    "metadata": {},
    "outputs": [
@@ -82,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "22480373-5dc1-4e4b-9f98-ce7b33e3d575",
    "metadata": {},
    "outputs": [],
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "464e2dfa-a955-464f-8e65-755bc881d8f0",
    "metadata": {},
    "outputs": [
@@ -107,7 +119,7 @@
        "       [0.59808016]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "ab81500a-bcab-4c86-bf47-06793bdd0a21",
    "metadata": {},
    "outputs": [
@@ -129,7 +141,7 @@
        "array([2.76988548, 2.67904581])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "d3f154ba-7d46-4c09-8186-3b70ec0bf615",
    "metadata": {},
    "outputs": [
@@ -151,7 +163,7 @@
        "array([ 2.55727716, -0.61125111])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "6b581ed3-044f-4e36-b784-7d7efcfd8277",
    "metadata": {},
    "outputs": [
@@ -187,6 +199,23 @@
     "ax.plot(X, ridge.coef_[0] * X + ridge.coef_[1], color='red', linewidth=2)\n",
     "ax.plot(X, lasso.coef_[0] * X + lasso.coef_[1], color='green', linewidth=2)\n",
     "ax.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b4ed2ca-8e3f-442c-8732-6b5036f8acd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = classification_data.drop(columns='output')\n",
+    "y = data['output']\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, random_state=0)\n",
+    "\n",
+    "lr = LogisticRegression(penalty='l2', alpha=0.1, fit_intercept=False, n_iterations=100)\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "print(classification_report(y_valid, lr.predict(X_valid)))\n"
    ]
   }
  ],
